# ynote

./: .clang-format  .env  .env_dev  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile-nginx  Makefile  README.md  build.rs  compile_flags.txt  config.toml  docker-compose.yml  example_conf.lua  init_db.sh  init_db.sql  main.c  main.go  nginx.conf  pages.lua  test.toml  tests.lua  tests.py  tests.sh  wrapper.h
go/: bot.go  main.go  snippet.go
lib/: dbw.c  dbw.h  httpaux.c  httpaux.h  ldbw.c  ldbw.h  luahttplib.h  web_static.c  web_static.h  ynote.h
luahttp/: command.lua  create_snippet.lua  get_file.lua  get_snippet.lua  hello.lua  index.lua  tags.lua
src/: bindings.rs  main.rs
static/: index.html
static/js/: main.js
static/www/: 404.html  create_snippet.html  index.html  snippet.html  upload_form.html
static/www/css/: nb.css  pico.css  styles.css
static/www/js/: helpers.js  main.js
templates/: error.html.tmpl  footer.html.tmpl  header.html.tmpl  index.html.tmpl  menu.html.tmpl  snippet.html.tmpl  snippet_edit.html.tmpl  styles.html.tmpl  upload.html.tmpl
