[package]
name = "ynote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
bindgen = "0.53.1"
cc = "1.0.73"

[profile.release]
# or "z"
opt-level = "z"

[lib]
name = "dbw"
path = "src/bindings.rs"
