[package]
name = "ynote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
toml = "0.5.9"
url = "2.3.1"

[build-dependencies]
bindgen = "0.53.1"
cc = "1.0.73"

[profile.release]
# or "z"
opt-level = "z"

[lib]
name = "dbw"
path = "src/bindings.rs"
